improve folder structure